--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "starterpack-bibaswan-khadka",
+  "name": "mydesktopapp",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "public/electron.js",
   "repository": "https://github.com/dartmouth-cs52-20X/starterpack-bibaswan-khadka.git",
   "author": "bibaswan-khadka <bibaswan.khadka.22@dartmouth.edu>",
   "license": "MIT",
+  "homepage": "./",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
     "test": "eslint src/**.js",
     "build": "yarn clean; NODE_ENV=production webpack --colors",
     "clean": "rimraf dist",
-    "deploy": "yarn build; surge -p dist -d bibaswankhadka-cs52-starter.surge.sh; yarn clean"
+    "deploy": "yarn build; surge -p dist -d bibaswankhadka-cs52-starter.surge.sh; yarn clean",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:8080 && electron .\"",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron Tutorial App\"",
+    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -20,7 +25,10 @@
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "concurrently": "^5.2.0",
     "css-loader": "^3.6.0",
+    "electron-installer-dmg": "^3.0.0",
+    "electron-packager": "^15.0.0",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-loader": "^4.0.2",
@@ -29,6 +37,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "4.0.0",
     "file-loader": "^6.0.0",
+    "global": "^4.4.0",
     "html-webpack-plugin": "^4.3.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.9.0",
@@ -39,12 +48,15 @@
     "style-loader": "^1.2.1",
     "surge": "^0.21.6",
     "url-loader": "^4.1.0",
+    "wait-on": "^5.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "electron": "^9.1.1",
+    "electron-is-dev": "^1.2.0",
     "jquery": "^3.5.1",
     "lodash.debounce": "^4.0.8",
     "react": "^16.13.1",
